--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <h1>A healty meal delivered to your door, every single day</h1>
+    <div class="section-hero">
+      <div class="hero-text-box">
+        <h1>A healty meal delivered to your door, every single day</h1>
+      </div>
+      <div class="hero-img-box">
+        <img src="./img/hero.png" alt="meals " />
+      </div>
+    </div>
   </body>
 </html>
