--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <img src="./img/customers/customer-5.jpg" alt="Customer photo" />
               <img src="./img/customers/customer-6.jpg" alt="Customer photo" />
             </div>
-            <p>250,000+ meals last year!</p>
+            <p class="delivered-text">250,000+ meals last year!</p>
           </div>
         </div>
         <div class="hero-img-box">
