--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <title>Omnifood</title>
   </head>
   <body>
+    <header class="header">
+      <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
+      <nav class="main-nav">Navigation</nav>
+    </header>
     <div class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
